concord_macros/tests/trybuild/fail/codegen_contract/reserved_multipart_arity_zero.stderr
error: reserved endpoint I/O family `Multipart` expects one or two type arguments
 --> tests/trybuild/fail/codegen_contract/reserved_multipart_arity_zero.rs:9:23
  |
9 |     POST Upload(body: Multipart<>)
  |                       ^^^^^^^^^^^
